<resources>
    <string name="app_name">HanIN Round 3</string>
    <string name="image">Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_you_password">Forget you password?</string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="home">Home</string>
    <string name="bookings">Bookings</string>
    <string name="nearby">Nearby</string>
    <string name="more">More</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_denied">Permission denied!</string>
</resources>
