<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_login_background" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.4"
        android:background="@drawable/gredient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/SignIn_logo_imageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_hangin_white" />

    <EditText
        android:id="@+id/signIn_email_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:drawableEnd="@drawable/ic_person_outline_black_24dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/SignIn_logo_imageView" />

    <EditText
        android:id="@+id/signIn_password_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:drawableEnd="@drawable/ic_lock_outline_black_24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/signIn_email_editText" />

    <Button
        android:id="@+id/signIn_forget_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorTransparent"
        android:text="@string/forget_you_password"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/signIn_password_editText" />

    <Button
        android:id="@+id/signIn_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_light"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/signIn_forget_button" />

    <TextView
        android:id="@+id/signIn_or_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/or"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/signIn_button" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@id/signIn_or_textView"
        app:layout_constraintEnd_toStartOf="@id/signIn_or_textView"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/signIn_or_textView" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@id/signIn_or_textView"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/signIn_or_textView"
        app:layout_constraintTop_toTopOf="@id/signIn_or_textView" />

    <Button
        android:id="@+id/signIn_facebook_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_background"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:drawableStart="@drawable/facebook"
        app:layout_constraintEnd_toStartOf="@+id/guideline_center"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/signIn_or_textView" />

    <Button
        android:id="@+id/signIn_google_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_center"
        app:layout_constraintTop_toBottomOf="@id/signIn_or_textView" />

    <TextView
        android:id="@+id/signIn_don_t_have_an_account_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/signIn_facebook_button" />

    <Button
        android:id="@+id/signIn_signUp_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorTransparent"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:gravity="start"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@id/signIn_don_t_have_an_account_textView"
        app:layout_constraintStart_toEndOf="@id/signIn_don_t_have_an_account_textView"
        app:layout_constraintTop_toTopOf="@id/signIn_don_t_have_an_account_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>